<resources>
    <string name="app_name">Обновление карт MAPS.ME</string>

    <string name="title_prefs">Настройки</string>
    <string name="title_about">О программе</string>

    <string name="title_download_without_wifi">Скачать по мобильной сети?</string>

    <string name="about_version">Версия</string>
    <string name="about_copyright" translatable="false">© П3тр0виЧъ</string>
    <string name="about_disclaimer">
        Приложение предоставляется на основе принципов «КАК ЕСТЬ» без каких-либо гарантий,
        то есть вы используете его на собственный риск и соглашаетесь с тем, что разработчик данного приложения
        не несёт никакой ответственности перед вами за какой-либо ущерб, включая потерю данных.
    </string>

    <string name="text_map_item_date_local">Установленная версия</string>
    <string name="text_map_item_date_server">Версия на сервере</string>

    <string name="text_error_mwm_maps_not_found">Карты MAPS.ME на устройстве не найдены</string>
    <string name="text_error_mwm_maps_not_found_path">Каталог %s не существует или не содержит нужных данных</string>
    <string name="text_error_mwm_maps_empty_path">&lt;нет имени&gt;</string>
    <string name="text_error_date_server_null">нет данных</string>

    <string name="text_notification_has_updates_ticker">Доступно обновление карт MAPS.ME</string>
    <string name="text_notification_has_updates_title">Обновление карт MAPS.ME</string>
    <string name="text_notification_maps_version_text">Версия: %s</string>
    <string name="text_notification_download_start_ticker">Загрузка карт MAPS.ME</string>
    <string name="text_notification_download_start_title">Загрузка карт MAPS.ME</string>
    <string name="text_notification_download_map_start_text">%1$s (%2$d/%3$d)</string>
    <string name="text_notification_download_end_ticker">Карты MAPS.ME загружены</string>
    <string name="text_notification_download_end_title">Карты MAPS.ME загружены</string>
    <string name="text_notification_install_end_ticker">Карты MAPS.ME обновлены</string>
    <string name="text_notification_install_end_title">Карты MAPS.ME обновлены</string>

    <string name="message_check_server_active">Запрос выполняется…</string>
    <string name="message_download_without_wifi">Чтобы не платить за передачу данных, используйте Wi-Fi.</string>
    <string name="message_error_no_internet">Отсутствует подключение к Интернет</string>
    <string name="message_error_sync_error_occurred_other">Во время обновления произошла ошибка</string>
    <string name="message_error_sync_error_occurred_internet">Во время обновления произошла ошибка сети</string>

    <string name="btn_retry_find_maps">Повторить поиск</string>

    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">ОТМЕНА</string>
    <string name="dialog_btn_download">СКАЧАТЬ</string>

    <string name="action_main">Карты</string>
    <string name="action_settings">Настройки</string>
    <string name="action_about">О программе</string>

    <string name="pref_notification_defaults_category_title">Уведомления</string>

    <string name="pref_notification_defaults_sound_title">Звук</string>
    <string name="pref_notification_defaults_sound_enabled_on">Включен</string>
    <string name="pref_notification_defaults_sound_enabled_off">Выключен</string>

    <string name="pref_notification_defaults_vibrate_title">Вибрация</string>
    <string name="pref_notification_defaults_vibrate_enabled_on">Включена</string>
    <string name="pref_notification_defaults_vibrate_enabled_off">Выключена</string>

    <string name="pref_notification_defaults_lights_title">Световой индикатор</string>
    <string name="pref_notification_defaults_lights_enabled_on">Включен</string>
    <string name="pref_notification_defaults_lights_enabled_off">Выключен</string>
</resources>